k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: comfyui
  name: comfyui
  namespace: stable-diffusion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comfyui
  template:
    metadata:
      labels:
        app: comfyui
    spec:
      containers:
      - args:
        - --listen
        - --port
        - "8188"
        - --preview-method
        - auto
        command:
        - /usr/local/bin/entrypoint.sh
        image: jamesbrink/comfyui:latest
        imagePullPolicy: Always
        name: comfyui
        ports:
        - containerPort: 8188
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: "1"
        volumeMounts:
        - mountPath: /comfyui/user
          name: user-data
        - mountPath: /comfyui/models
          name: models-data
        - mountPath: /comfyui/output
          name: output-data
        - mountPath: /comfyui/input
          name: input-data
      runtimeClassName: nvidia
      volumes:
      - name: user-data
        persistentVolumeClaim:
          claimName: comfyui-user-pvc
      - name: models-data
        persistentVolumeClaim:
          claimName: comfyui-models-pvc
      - name: output-data
        persistentVolumeClaim:
          claimName: comfyui-output-pvc
      - name: input-data
        persistentVolumeClaim:
          claimName: comfyui-input-pvc
